# colornames

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  rxconfig.py
assets/: theme.json
colornames/: colornames.py
colornames/components/: __init__.py  base.py  navbar.py  picker.py
colornames/pages/: __init__.py  home.py
colornames/utils/: __init__.py  colors.py  state.py  themer.py
docs/: sitemap-0.xml
docs/404/: index.html
docs/_next/static/-neYv8OG6Uxx3GIg0DCZb/: _buildManifest.js
docs/_next/static/chunks/: 844-ef5f656f0a9c37fa.js
docs/_next/static/chunks/pages/: _app-8a4a21a540636a85.js  index-75a86e03f8a1f1ae.js
frontend/: index.html
frontend/_next/static/chunks/: 375-a69cf7358a24a7f6.js
frontend/_next/static/chunks/pages/: 404-bebb2787900f786e.js
