[project]
name = ""
version = ""
description = ""
authors = [
    {name = "hex benjamin", email = "hex@hexbenjam.in"},
]
dependencies = [
    "reflex>=0.2.9",
    "httpx>=0.24.1",
    "colour>=0.1.5",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "sourcery>=1.10.1",
    "icecream>=2.1.3",
    "rich>=13.6.0",
]
